  buffer overflow, which could be exploited to achieve escalated
  privileges.  This flaw was introduced in glibc 2.34.

  CVE-2025-0395: When the assert() function fails, it does not allocate
  enough space for the assertion failure message string and size
  information, which may lead to a buffer overflow if the message string
  size aligns to page size.

The following bugs are resolved with this release:

  [20975] Deferred cancellation triggers in __check_pf and looses lock leading to deadlock
  [27576] gmon: improve mcount overflow handling
  [27821] ungetc: Fix backup buffer leak on program exit
  [29039] Corrupt DTV after reuse of a TLS module ID following dlclose with unused TLS
  [29444] gmon: Fix allocated buffer overflow (bug 29444)
  [30053] time: strftime %s returns -1 after 2038 on 32 bits systems
  [30081] resolv: Do not wait for non-existing second DNS response after error
  [30101] gmon: fix memory corruption issues
  [30125] dynamic-link: [regression, bisected] glibc-2.37 creates new
    symlink for libraries without soname
  [30151] gshadow: Matching sgetsgent, sgetsgent_r ERANGE handling
  [30163] posix: Fix system blocks SIGCHLD erroneously
  [30305] x86_64: Fix asm constraints in feraiseexcept
  [30428] AMD cache size computation does not work for some CPUs, hypervisors
  [30477] libc: [RISCV]: time64 does not work on riscv32
  [30515] _dl_find_object incorrectly returns 1 during early startup
  [30745] Slight bug in cache info codes for x86
  [30842] Stack read overflow in getaddrinfo in no-aaaa mode (CVE-2023-4527)
  [30843] potential use-after-free in getcanonname (CVE-2023-4806)
  [31183] Wide stream buffer size reduced MB_LEN_MAX bytes after bug 17522 fix
  [31184] FAIL: elf/tst-tlsgap
  [31185] Incorrect thread point access in _dl_tlsdesc_undefweak and _dl_tlsdesc_dynamic
  [31476] resolv: Track single-request fallback via _res._flags
  [31890] resolv: Allow short error responses to match any DNS query