@@ -46,6 +46,9 @@ Security related changes:
   information, which may lead to a buffer overflow if the message string
   size aligns to page size.
 
+  GLIBC-SA-2026-0003: wordexp with WRDE_REUSE and WRDE_APPEND may return
+  uninitialized memory (CVE-2025-15281).
+
 The following bugs are resolved with this release:
 
   [20975] Deferred cancellation triggers in __check_pf and looses lock leading to deadlock
@@ -82,6 +85,8 @@ The following bugs are resolved with this release:
   [32582] Fix underallocation of abort_msg_s struct (CVE-2025-0395)
   [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
   [33185] Fix double-free after allocation failure in regcomp
+  [33814] glob: wordexp with WRDE_REUSE and WRDE_APPEND may return
+    uninitialized memory
 
 Version 2.37
 
